--- a/src/app/global.css
+++ b/src/app/global.css
@@ -74,3 +74,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+.full-viewport-height {
+  height: 100vh;
+}
+
+@supports (height: 100dvh) {
+  .full-viewport-height {
+    height: 100dvh;
+  }
+}
+
+.full-viewport-min-height {
+  min-height: 100vh;
+}
+
+@supports (height: 100dvh) {
+  .full-viewport-min-height {
+    min-height: 100dvh;
+  }
+}
